@@ -4,7 +4,7 @@
 </head>
 <body>
 <ul>
-<li></li>
+<li>Add patch to pass selected text to blogging clients. (Contributed by Pukka author Justin R. Miller).</li>
 </ul>
 </body>
 </html>
