@@ -10,6 +10,7 @@ Thanks!
 
 2.2.0.2207
 ----------
+- Add patch to pass selected text to blogging clients. (Contributed by Pukka author Justin R. Miller).
 
 2.2.0.2206
 ----------
